tests/spec/libsass_todo_tests/errors/import/url/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-todo-tests/errors/import/url"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("url")
}

mod mixin;
